--- a/requirements.in
+++ b/requirements.in
@@ -7,6 +7,9 @@ flake8
 python-dotenv>=0.5.1
 # scripts
 numpy
+# web and gui
+dash
+# formatting and static code analysis
 black
 pylint
 black[jupyter]
