--- a/requirements.in
+++ b/requirements.in
@@ -1,15 +1,9 @@
-# external requirements
-click
-Sphinx
-coverage
-awscli
-flake8
-python-dotenv>=0.5.1
 # scripts
 numpy
 # web and gui
 dash
+dash_bio
 # formatting and static code analysis
 black
-pylint
-black[jupyter]
+# pylint
+# black[jupyter]
