--- a/src/.pylintrc
+++ b/src/.pylintrc
@@ -1,5 +1,7 @@
 [MASTER]
 
+explicit-package-bases=True
+
 # A comma-separated list of package or module names from where C extensions may
 # be loaded. Extensions are loading into the active Python interpreter and may
 # run arbitrary code.
